force-app/main/default/objects/Recebimentos__c/Recebimentos__c.object-meta.xml
<CustomObject>
    <label>Recebimento</label>
    <nameField>
        <label>Número do Recebimento</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Recebimentos</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>