force-app/main/default/objects/Recebimentos__c/fields/Aliquota_Gerente__c.field-meta.xml
<CustomField>
    <fullName>Aliquota_Gerente__c</fullName>
    <formula>IF( Vendedor__c != Gerente__c &amp;&amp; Titulo__r.Faturamento__r.Pedido__r.Gerente__c != null, AliquotaVendedor__c , 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Alíquota Gerente (%)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>