force-app/main/default/objects/Recebimentos__c/fields/Animalcare_Comissao__c.field-meta.xml
<CustomField>
    <fullName>Animalcare_Comissao__c</fullName>
    <formula>((Valor_Pago__c * Titulo__r.Faturamento__r.Pedido__r.Veterinaria_porcentagem__c) * 0.01)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Animalcare Comissão</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>