force-app/main/default/objects/Recebimentos__c/fields/BC_IRPJ_CSLL__c.field-meta.xml
<CustomField>
    <fullName>BC_IRPJ_CSLL__c</fullName>
    <label>BC IRPJ/CSLL</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>