force-app/main/default/objects/Recebimentos__c/fields/BC_PIS_COFINS__c.field-meta.xml
<CustomField>
    <fullName>BC_PIS_COFINS__c</fullName>
    <label>BC PIS/COFINS</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>