force-app/main/default/objects/Recebimentos__c/fields/CFOP__c.field-meta.xml
<CustomField>
    <fullName>CFOP__c</fullName>
    <label>CFOP</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>