force-app/main/default/objects/Recebimentos__c/fields/Codigo_Cliente__c.field-meta.xml
<CustomField>
    <fullName>Codigo_Cliente__c</fullName>
    <label>Código Cliente</label>
    <length>255</length>
    <type>Text</type>
</CustomField>