force-app/main/default/objects/Recebimentos__c/fields/COFINS_3__c.field-meta.xml
<CustomField>
    <fullName>COFINS_3__c</fullName>
    <label>COFINS 3%</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>