force-app/main/default/objects/Recebimentos__c/fields/COFINS__c.field-meta.xml
<CustomField>
    <fullName>COFINS__c</fullName>
    <label>COFINS</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>