force-app/main/default/objects/Recebimentos__c/fields/Comissao_Gerente_Paga__c.field-meta.xml
<CustomField>
    <fullName>Comissao_Gerente_Paga__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Comissão Gerente Paga</label>
    <type>Checkbox</type>
</CustomField>