force-app/main/default/objects/Recebimentos__c/fields/ComissaoGerente__c.field-meta.xml
<CustomField>
    <fullName>ComissaoGerente__c</fullName>
    <formula>Valor_Recebido__c * Aliquota_Gerente__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Comissão Gerente</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>