force-app/main/default/objects/Recebimentos__c/fields/ComissaoPaga__c.field-meta.xml
<CustomField>
    <fullName>ComissaoPaga__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Comissão Paga</label>
    <type>Checkbox</type>
</CustomField>