force-app/main/default/objects/Recebimentos__c/fields/ComissaoVendedor__c.field-meta.xml
<CustomField>
    <fullName>ComissaoVendedor__c</fullName>
    <formula>Valor_Pago__c *  AliquotaVendedor__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Comissão Vendedor</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>