force-app/main/default/objects/Recebimentos__c/fields/Comisss_o__c.field-meta.xml
<CustomField>
    <fullName>Comisss_o__c</fullName>
    <formula>Valor_Comissao__c / Valor_Recebido__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>% Comisssão</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>