force-app/main/default/objects/Recebimentos__c/fields/Conta__c.field-meta.xml
<CustomField>
    <fullName>Conta__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Cliente</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Recebimentos</relationshipLabel>
    <relationshipName>Recebimentos</relationshipName>
    <type>Lookup</type>
</CustomField>