force-app/main/default/objects/Recebimentos__c/fields/Conta_Contabil__c.field-meta.xml
<CustomField>
    <fullName>Conta_Contabil__c</fullName>
    <label>Conta Contábil</label>
    <length>255</length>
    <type>Text</type>
</CustomField>