force-app/main/default/objects/Recebimentos__c/fields/Data_de_pagamento_da_comiss_o__c.field-meta.xml
<CustomField>
    <fullName>Data_de_pagamento_da_comiss_o__c</fullName>
    <label>Data de pagamento da comissão</label>
    <type>Date</type>
</CustomField>