force-app/main/default/objects/Recebimentos__c/fields/Data_do_Recebimento__c.field-meta.xml
<CustomField>
    <fullName>Data_do_Recebimento__c</fullName>
    <label>Data do Recebimento</label>
    <type>Date</type>
</CustomField>