force-app/main/default/objects/Recebimentos__c/fields/Data_do_vencimento__c.field-meta.xml
<CustomField>
    <fullName>Data_do_vencimento__c</fullName>
    <label>Data do vencimento</label>
    <type>Date</type>
</CustomField>