force-app/main/default/objects/Recebimentos__c/fields/Data_Emissao__c.field-meta.xml
<CustomField>
    <fullName>Data_Emissao__c</fullName>
    <label>Data Emissão</label>
    <type>DateTime</type>
</CustomField>