force-app/main/default/objects/Recebimentos__c/fields/Data_Emissao_NF__c.field-meta.xml
<CustomField>
    <fullName>Data_Emissao_NF__c</fullName>
    <label>Data Emissão NF</label>
    <type>DateTime</type>
</CustomField>