force-app/main/default/objects/Recebimentos__c/fields/Data_Prevista_do_Recebimento__c.field-meta.xml
<CustomField>
    <fullName>Data_Prevista_do_Recebimento__c</fullName>
    <label>Data Prevista do Recebimento</label>
    <type>Date</type>
</CustomField>