force-app/main/default/objects/Recebimentos__c/fields/Data_Recebimento__c.field-meta.xml
<CustomField>
    <fullName>Data_Recebimento__c</fullName>
    <label>Data do Recebimento</label>
    <type>DateTime</type>
</CustomField>