force-app/main/default/objects/Recebimentos__c/fields/DTLACTO__c.field-meta.xml
<CustomField>
    <fullName>DTLACTO__c</fullName>
    <label>DTLACTO</label>
    <type>DateTime</type>
</CustomField>