force-app/main/default/objects/Recebimentos__c/fields/Faturamento_Feito_v2__c.field-meta.xml
<CustomField>
    <fullName>Faturamento_Feito_v2__c</fullName>
    <formula>IF(
	OR(
		Nota_Fiscal1__r.Faturamento_Feito2__c == &apos;001i00000085QYb&apos;,
		Nota_Fiscal1__r.Faturamento_Feito2__c == &apos;0015A00001tSrPa&apos;,
		Nota_Fiscal1__r.Faturamento_Feito2__c == &apos;0015A00001yGbVZ&apos;
	),
	&apos;Hospcom&apos;,
	&apos;Fabricas&apos;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Faturamento Feito</label>
    <type>Text</type>
</CustomField>