force-app/main/default/objects/Recebimentos__c/fields/Gerente__c.field-meta.xml
<CustomField>
    <fullName>Gerente__c</fullName>
    <formula>Titulo__r.Faturamento__r.Pedido__r.Gerente__r.FirstName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Gerente</label>
    <type>Text</type>
</CustomField>