force-app/main/default/objects/Recebimentos__c/fields/IPI__c.field-meta.xml
<CustomField>
    <fullName>IPI__c</fullName>
    <label>IPI</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>