force-app/main/default/objects/Recebimentos__c/fields/IRRF__c.field-meta.xml
<CustomField>
    <fullName>IRRF__c</fullName>
    <label>IRRF</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>