force-app/main/default/objects/Recebimentos__c/fields/NF_Representacao__c.field-meta.xml
<CustomField>
    <fullName>NF_Representacao__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <inlineHelpText>NF de referência utilizada para cobrança de comissões.</inlineHelpText>
    <label>NF Representaçao</label>
    <lookupFilter>
        <active>true</active>
        <booleanFilter>1 AND 2</booleanFilter>
        <filterItems>
            <field>Faturamento__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Representação</value>
        </filterItems>
        <filterItems>
            <field>$Source.RecordTypeId</field>
            <operation>equals</operation>
            <value>Parceiro</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Faturamento__c</referenceTo>
    <relationshipLabel>Recebimentos das NFs de Fabricantes</relationshipLabel>
    <relationshipName>NF_Representacao</relationshipName>
    <type>Lookup</type>
</CustomField>