force-app/main/default/objects/Recebimentos__c/fields/Nome_Cliente__c.field-meta.xml
<CustomField>
    <fullName>Nome_Cliente__c</fullName>
    <label>Nome Cliente</label>
    <length>255</length>
    <type>Text</type>
</CustomField>