force-app/main/default/objects/Recebimentos__c/fields/Nota_Fiscal1__c.field-meta.xml
<CustomField>
    <fullName>Nota_Fiscal1__c</fullName>
    <label>Número do Faturamento</label>
    <lookupFilter>
        <active>true</active>
        <booleanFilter>(3 AND 6) OR (4 AND 6) OR (1 AND 6) OR (5 AND 7) OR (2 AND 6)</booleanFilter>
        <filterItems>
            <field>Faturamento__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Serviços (Mão de Obra)</value>
        </filterItems>
        <filterItems>
            <field>Faturamento__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Vendas (Hospcom)</value>
        </filterItems>
        <filterItems>
            <field>Faturamento__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Representação</value>
        </filterItems>
        <filterItems>
            <field>Faturamento__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Serviços (Fábrica)</value>
        </filterItems>
        <filterItems>
            <field>Faturamento__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Vendas (Fábrica)</value>
        </filterItems>
        <filterItems>
            <field>$Source.RecordTypeId</field>
            <operation>equals</operation>
            <value>Hospcom</value>
        </filterItems>
        <filterItems>
            <field>$Source.RecordTypeId</field>
            <operation>equals</operation>
            <value>Parceiro</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Faturamento__c</referenceTo>
    <relationshipLabel>Recebimentos</relationshipLabel>
    <relationshipName>Recebimentos</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>