force-app/main/default/objects/Recebimentos__c/fields/Numero_da_NFS__c.field-meta.xml
<CustomField>
    <fullName>Numero_da_NFS__c</fullName>
    <label>Numero da NFS</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>