force-app/main/default/objects/Recebimentos__c/fields/Numero_Faturamento__c.field-meta.xml
<CustomField>
    <fullName>Numero_Faturamento__c</fullName>
    <label>Numero Faturamento</label>
    <length>10</length>
    <type>Text</type>
</CustomField>