force-app/main/default/objects/Recebimentos__c/fields/Numero_Pedido__c.field-meta.xml
<CustomField>
    <fullName>Numero_Pedido__c</fullName>
    <label>Numero Pedido</label>
    <length>15</length>
    <type>Text</type>
</CustomField>