force-app/main/default/objects/Recebimentos__c/fields/Parcela__c.field-meta.xml
<CustomField>
    <fullName>Parcela__c</fullName>
    <label>Parcela</label>
    <length>255</length>
    <type>Text</type>
</CustomField>