force-app/main/default/objects/Recebimentos__c/fields/PIS__c.field-meta.xml
<CustomField>
    <fullName>PIS__c</fullName>
    <label>PIS</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>