force-app/main/default/objects/Recebimentos__c/fields/Procedencia__c.field-meta.xml
<CustomField>
    <fullName>Procedencia__c</fullName>
    <formula>TEXT(Nota_Fiscal1__r.Procedencia__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Procedência v1</label>
    <type>Text</type>
</CustomField>