force-app/main/default/objects/Recebimentos__c/fields/Procedencia_v2__c.field-meta.xml
<CustomField>
    <fullName>Procedencia_v2__c</fullName>
    <formula>Nota_Fiscal1__r.Procedencia_v2__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Procedência</label>
    <type>Text</type>
</CustomField>