force-app/main/default/objects/Recebimentos__c/fields/Titulo__c.field-meta.xml
<CustomField>
    <fullName>Titulo__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Título</label>
    <referenceTo>Titulo__c</referenceTo>
    <relationshipLabel>Recebimentos</relationshipLabel>
    <relationshipName>Recebimentos_del</relationshipName>
    <type>Lookup</type>
</CustomField>