force-app/main/default/objects/Recebimentos__c/fields/Titulo_SAP__c.field-meta.xml
<CustomField>
    <fullName>Titulo_SAP__c</fullName>
    <label>N. Titulo SAP</label>
    <length>16</length>
    <type>Text</type>
</CustomField>