force-app/main/default/objects/Recebimentos__c/fields/Total_ICMS__c.field-meta.xml
<CustomField>
    <fullName>Total_ICMS__c</fullName>
    <label>Total ICMS</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>