force-app/main/default/objects/Recebimentos__c/fields/Utiliza_o__c.field-meta.xml
<CustomField>
    <fullName>Utiliza_o__c</fullName>
    <label>Utilização</label>
    <length>255</length>
    <type>Text</type>
</CustomField>