force-app/main/default/objects/Recebimentos__c/fields/Valor_Acrescimo__c.field-meta.xml
<CustomField>
    <fullName>Valor_Acrescimo__c</fullName>
    <label>Valor Acréscimo</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>