force-app/main/default/objects/Recebimentos__c/fields/Valor_Comissao__c.field-meta.xml
<CustomField>
    <fullName>Valor_Comissao__c</fullName>
    <label>Valor Comissão</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>