force-app/main/default/objects/Recebimentos__c/fields/Valor_Desconto__c.field-meta.xml
<CustomField>
    <fullName>Valor_Desconto__c</fullName>
    <label>Valor Desconto</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>