force-app/main/default/objects/Recebimentos__c/fields/Valor_NF_Faturada__c.field-meta.xml
<CustomField>
    <fullName>Valor_NF_Faturada__c</fullName>
    <label>Valor NF Faturada</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>