force-app/main/default/objects/Recebimentos__c/fields/Valor_NFE__c.field-meta.xml
<CustomField>
    <fullName>Valor_NFE__c</fullName>
    <formula>Nota_Fiscal1__r.Valor_Faturado__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Valor do Faturamento</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>