force-app/main/default/objects/Recebimentos__c/fields/Valor_Recebido__c.field-meta.xml
<CustomField>
    <fullName>Valor_Recebido__c</fullName>
    <label>Valor Recebido</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>