force-app/main/default/objects/Recebimentos__c/fields/Vendedor2__c.field-meta.xml
<CustomField>
    <fullName>Vendedor2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Vendedor do recebimento</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Recebimentos</relationshipName>
    <type>Lookup</type>
</CustomField>