force-app/main/default/objects/Recebimentos__c/fields/Vendedor__c.field-meta.xml
<CustomField>
    <fullName>Vendedor__c</fullName>
    <formula>Pedido__r.Vendedor__r.FirstName + &apos; &apos; +  Pedido__r.Vendedor__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Vendedor do pedido</label>
    <type>Text</type>
</CustomField>