force-app/main/default/objects/Recebimentos__c/fields/Vendedor_do_recebimento__c.field-meta.xml
<CustomField>
    <fullName>Vendedor_do_recebimento__c</fullName>
    <label>Vendedor do recebimento</label>
    <length>50</length>
    <type>Text</type>
</CustomField>