force-app/main/default/objects/Recebimentos__c/recordTypes/Hospcom.recordType-meta.xml
<RecordType>
    <fullName>Hospcom</fullName>
    <active>true</active>
    <description>Recebimento feito sobre NFs da Hospcom.</description>
    <label>Hospcom</label>
</RecordType>