force-app/main/default/objects/Recebimentos__c/recordTypes/Parceiro.recordType-meta.xml
<RecordType>
    <fullName>Parceiro</fullName>
    <active>true</active>
    <description>Recebimentos sobre NFs de parceiros.</description>
    <label>Parceiro</label>
</RecordType>