force-app/main/default/objects/Recebimentos__c/validationRules/carta_de_credito.validationRule-meta.xml
<ValidationRule>
    <fullName>carta_de_credito</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    Nota_Fiscal1__r.Name == &apos;CARTA DE CRÉDITO&apos;,
    Conta__c == null
)</errorConditionFormula>
    <errorDisplayField>Conta__c</errorDisplayField>
    <errorMessage>Para recebimentos de cartas de crédito, vincular a conta do cliente</errorMessage>
</ValidationRule>