force-app/main/default/objects/Recebimentos__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Nota_Fiscal1__c</columns>
    <columns>Valor_NFE__c</columns>
    <columns>NAME</columns>
    <columns>Valor_Total__c</columns>
    <columns>Departamento__c</columns>
    <columns>Data_do_Recebimento__c</columns>
    <filterScope>Everything</filterScope>
    <label>Recebimentos Parceiros</label>
</ListView>