force-app/main/default/objects/Recebimentos__c/listViews/Recebimentos_Hospcom.listView-meta.xml
<ListView>
    <fullName>Recebimentos_Hospcom</fullName>
    <columns>NAME</columns>
    <columns>Valor_NFE__c</columns>
    <columns>Nome_Cliente__c</columns>
    <columns>Tipo__c</columns>
    <columns>Valor_Pago__c</columns>
    <columns>Parcela__c</columns>
    <columns>Departamento__c</columns>
    <columns>Numero_Pedido__c</columns>
    <columns>Banco__c</columns>
    <columns>Cancelado__c</columns>
    <columns>Data_do_Recebimento__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Vendedor__c</columns>
    <columns>Titulo_SAP__c</columns>
    <columns>Numero_Faturamento__c</columns>
    <filterScope>Everything</filterScope>
    <label>Recebimentos Hospcom</label>
</ListView>